--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
                                     <option value="High-School">9th</option>
                                     <option value="High-School">10th</option>
                                     <option value="High-School">11th</option>
-                                    <option value="12High-Schoolth">12th</option>
+                                    <option value="High-School">12th</option>
                                     <option value="Associate">Associate</option>
                                     <option value="Some-college">Some-college</option>
                                     <option value="Bachelors">Bachelors</option>
